Fix: resolved final layout gaps

--- a/index.html
+++ b/index.html
@@ -2,10 +2,25 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
+
+    <link rel="icon" href="/favicon.ico" sizes="any" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+
+    <title>Maa Laxmi Dhaba | Authentic Indian Cuisine in Indore</title>
+    <meta name="title" content="Maa Laxmi Dhaba | Authentic Indian Cuisine in Indore" />
+    <meta name="description" content="Experience the taste of tradition at Maa Laxmi Dhaba. We serve authentic, delicious dishes in a warm and welcoming environment in indore. View our menu and book your table today!" />
+    <meta name="keywords" content="dhaba in indore, indian restaurant, best dhaba, maa laxmi dhaba, traditional food, online booking" />
+    
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://maa-laxmi-dhaba.vercel.app/" />
+    <meta property="og:title" content="Maa Laxmi Dhaba | Authentic Indian Cuisine in indore" />
+    <meta property="og:description" content="Experience the taste of tradition at Maa Laxmi Dhaba. We serve authentic, delicious dishes in a warm and welcoming environment." />
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://maa-laxmi-dhaba.vercel.app/" />
+    <meta property="twitter:title" content="Maa Laxmi Dhaba | Authentic Indian Cuisine in indore" />
+    <meta property="twitter:description" content="Experience the taste of tradition at Maa Laxmi Dhaba. We serve authentic, delicious dishes in a warm and welcoming environment." />
+    </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
